--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/icon/favicon-32x32.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
